# ComputerGraphicMath

./: CMakeLists.txt  main.cpp
inc/: Cube.h  Intersections.h  Line.h  Matrix.h  Plane.h  Quaternion.h  RTX.h  Ray.h  Segment.h  Sphere.h  Triangle.h  Utils.h  Vector.h  Vector4.h
src/: Matrix.cpp  Quaternion.cpp  Ray.cpp  Vector.cpp
